--- a/T9try/Views/Windows/MainWindow.xaml
+++ b/T9try/Views/Windows/MainWindow.xaml
@@ -11,9 +11,20 @@
         <vm:MainWindowViewModel/>
     </Window.DataContext>
     <DockPanel LastChildFill="True">
-        <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" Margin="2">
-            <Button Content="Файл" Margin="3" Width="50" Height="25"/>
-        </StackPanel>
+        <Grid DockPanel.Dock="Bottom">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal"  Margin="2" Grid.Column="0">
+                <Button Content="Файл" Margin="3" Width="50" Height="25" Command="{Binding FileCommand}"/>
+                <CheckBox Content="Перезапись" IsChecked="{Binding Rewrite, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" Margin="5"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal"  Margin="2" Grid.Column="1" HorizontalAlignment="Right" >
+                <CheckBox  Content="Чистить" IsChecked="{Binding Clean, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Right" Margin="0,2,16,2" VerticalAlignment="Center"/>
+                <Button Content="Выучить" Width="75" Height="25" HorizontalAlignment="Right" Margin="0,2,5,2" Command="{Binding StudyCommand}"/>
+            </StackPanel>
+        </Grid>
         <TextBlock Text="T9" VerticalAlignment="Center" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
         <Grid>
             <Grid.RowDefinitions>
@@ -27,13 +38,7 @@
                 <TextBlock Text="{Binding Suggestion2}" FontSize="20" Height="25" Margin="5,10" Width="Auto" MouseUp="TextBlock_MouseUp"/>
                 <TextBlock Text="{Binding Suggestion3}" FontSize="20" Height="25" Margin="5,10" Width="Auto" MouseUp="TextBlock_MouseUp"/>
             </StackPanel>
-            <DockPanel Grid.Row="2" LastChildFill="True">
-                <Button Content="Выучить" DockPanel.Dock="Bottom" Width="75" Height="25" HorizontalAlignment="Right" Margin="0,2,5,2"/>
-                <TextBox x:Name="Text" Text="{Binding Text, Mode=TwoWay, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
-
-
-            </DockPanel>
-            
+            <TextBox Grid.Row="2" Margin="5" x:Name="Text" Text="{Binding Text, Mode=TwoWay, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
         </Grid>
     </DockPanel>
 </Window>
