--- a/T9try/Views/Windows/MainWindow.xaml
+++ b/T9try/Views/Windows/MainWindow.xaml
@@ -29,16 +29,23 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="2*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10,50,10,0" Width="Auto">
+            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10" Width="Auto" VerticalAlignment="Center">
                 <TextBlock Text="{Binding Suggestion1}" FontSize="20" Height="25" Margin="5,10" Width="Auto" MouseUp="TextBlock_MouseUp"/>
                 <TextBlock Text="{Binding Suggestion2}" FontSize="20" Height="25" Margin="5,10" Width="Auto" MouseUp="TextBlock_MouseUp"/>
                 <TextBlock Text="{Binding Suggestion3}" FontSize="20" Height="25" Margin="5,10" Width="Auto" MouseUp="TextBlock_MouseUp"/>
             </StackPanel>
-            <TextBox Grid.Row="2" Margin="5" x:Name="Text" Text="{Binding Text, Mode=TwoWay, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
+            <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10" Width="Auto" VerticalAlignment="Center">
+                <TextBlock Text="{Binding CharSuggestion1}" FontSize="20" Height="25" Margin="5,10" Width="Auto" MouseUp="TextBlock1_MouseUp"/>
+                <TextBlock Text="{Binding CharSuggestion2}" FontSize="20" Height="25" Margin="5,10" Width="Auto" MouseUp="TextBlock1_MouseUp"/>
+                <TextBlock Text="{Binding CharSuggestion3}" FontSize="20" Height="25" Margin="5,10" Width="Auto" MouseUp="TextBlock1_MouseUp"/>
+                <TextBlock Text="{Binding CharSuggestion4}" FontSize="20" Height="25" Margin="5,10" Width="Auto" MouseUp="TextBlock1_MouseUp"/>
+            </StackPanel>
+            <TextBox Grid.Row="3" Margin="5" x:Name="Text" Text="{Binding Text, Mode=TwoWay, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
         </Grid>
     </DockPanel>
 </Window>
